Add tm save settings endpoints.
